Added view to show initial error data in table

--- a/monitor/templates/monitor/downtime-form.html
+++ b/monitor/templates/monitor/downtime-form.html
@@ -23,12 +23,12 @@
         <input type="text" name="startdate" id="startdatepicker" />
         <input type="text" name="enddate" id="enddatepicker" />
         <input type="submit" value="Send" />
-        <select name="interval">
+        <!--select name="interval">
             <option value="720">30 dage</option>
             <option value="168">7 dage</option>
             <option value="24">24 timer</option>
             <option value="1">1 time</option>
-        </select>
+        </select-->
     </form>
 
     {% comment %}
